--- a/Validaciones/index.html
+++ b/Validaciones/index.html
@@ -17,33 +17,41 @@
         <label for="cedula">Cedula (*)</label>
         <input type="text" id="cedula" name="cedula" value="" onkeyup="return validarCedula(this)"  placeholder="Ingrese el número de cedula ..."/>
         <span id="mensajeCedula" class="error"></span>
+        
         <br>
 
         <label for="nombres">Nombres (*)</label>
         <input type="text" id="nombres" name="nombres" value="" placeholder="Ingrese sus dos nombres ..." onkeyup="return validarLetras(this)"/>
+        <span id="mensajeNombres" class="error"></span>
         <br>
 
         <label for="apellidos">Apelidos (*)</label>
         <input type="text" id="apellidos" name="apellidos" value="" placeholder="Ingrese sus dos apellidos ... " />
+        <span id="mensajeApellidos" class="error"></span>
         <br>
 
         <label for="direccion">Dirección (*)</label>
         <input type="text" id="direccion" name="direccion" value="" placeholder="Ingrese su dirección ..." />
+        <span id="mensajeDireccion" class="error"></span>
         <br>
         <label for="telefono">Teléfono (*)</label>
-        <input type="text" id="telefono" name="telefono" value="" placeholder="Ingrese su número telefónico..." />
+        <input type="text" id="telefono" onkeyup="return validarTelefono(this)"  name="telefono" value="" placeholder="Ingrese su número telefónico..." />
+        <span id="mensajeTelefono" class="error"></span>
         <br>
 
         <label for="fecha">Fecha Nacimiento (*)</label>
         <input type="text" id="fechaNacimiento" name="fechaNacimiento" value="" placeholder="Ingrese sufecha de nacimiento ..." />
+        <span id="mensajeFecha" class="error"></span>
         <br>
 
         <label for="correo">Correo electrónico (*)</label>
         <input type="email" id="correo" name="correo" value="" placeholder="Ingrese su correo electrónico ..." />
+        <span id="mensajeCorreo" class="error"></span>
         <br>
         
         <label for="correo">Contraseña (*)</label>
         <input type="password" id="contrasena" name="contrasena" value="" placeholder="Ingrese su contraseña ..." />
+        <span id="mensajeContrasena" class="error"></span>
         <br>
         <button type="submit" id="crear" name="crear" onclick="botonSubmit()" value="Aceptar">Aceptar </button>
         <button type="reset" id="cancelar" name="cancelar" value="Cancelar">Cancelar </button>
