--- a/Validaciones/index.html
+++ b/Validaciones/index.html
@@ -45,7 +45,7 @@
         <br>
 
         <label for="correo">Correo electrónico (*)</label>
-        <input type="email" id="correo" name="correo" value="" placeholder="Ingrese su correo electrónico ..." />
+        <input type="email" id="correo" name="correo"  onkeyup="return validarCorreo(this)" value="" placeholder="Ingrese su correo electrónico ..." />
         <span id="mensajeCorreo" class="error"></span>
         <br>
         
