Validacion del campo nombre

--- a/Validaciones/index.html
+++ b/Validaciones/index.html
@@ -21,7 +21,7 @@
         <br>
 
         <label for="nombres">Nombres (*)</label>
-        <input type="text" id="nombres" name="nombres" value="" placeholder="Ingrese sus dos nombres ..." onkeyup="return validarLetras(this)"/>
+        <input type="text" id="nombres" name="nombres" value="" placeholder="Ingrese sus dos nombres ..." onkeyup="return validarNombres(this)"/>
         <span id="mensajeNombres" class="error"></span>
         <br>
 
