--- a/Validaciones/index.html
+++ b/Validaciones/index.html
@@ -26,7 +26,7 @@
         <br>
 
         <label for="apellidos">Apelidos (*)</label>
-        <input type="text" id="apellidos" name="apellidos" value="" placeholder="Ingrese sus dos apellidos ... " />
+        <input type="text" id="apellidos" name="apellidos" value="" placeholder="Ingrese sus dos apellidos ... " onkeyup="return validarApellidos(this)"/>
         <span id="mensajeApellidos" class="error"></span>
         <br>
 
@@ -50,7 +50,7 @@
         <br>
         
         <label for="correo">Contraseña (*)</label>
-        <input type="password" id="contrasena" name="contrasena" value="" placeholder="Ingrese su contraseña ..." />
+        <input type="password" id="contrasena" name="contrasena" value="" onkeyup="return validarContraseña(this)" placeholder="Ingrese su contraseña ..." />
         <span id="mensajeContrasena" class="error"></span>
         <br>
         <button type="submit" id="crear" name="crear" onclick="botonSubmit()" value="Aceptar">Aceptar </button>
