--- a/Validaciones/index.html
+++ b/Validaciones/index.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-    <form id="formulario01" method="POST" action="" >
+    <form id="formulario01" method="POST" action="PHP/doc.php" >
 
         <label for="cedula">Cedula (*)</label>
         <input type="text" id="cedula" name="cedula" value="" onkeyup="return validarCedula(this)"  placeholder="Ingrese el número de cedula ..."/>
